# glvis

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  INSTALL  NOTICE  README  README.md  SConstruct  glvis-keygen.sh  glvis.cpp  makefile  nvtx.hpp  vcpkg.json
.github/workflows/: builds.yml  release.yml
glvis.wiki/: CurvilinearVTKMeshes.wiki  Features.wiki  Gallery.wiki  MeshFormats.wiki  NURBS.wiki  OldMain.wiki  OptionsAndUse.wiki  ParallelVisualization.wiki  Releases.wiki
glvis.wiki/.hg/: dirstate  hgrc  undo.desc
glvis.wiki/.hg/cache/: branchheads  tags
glvis.wiki/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
glvis.wiki/.hg/store/data/: _curvilinear_v_t_k_meshes.wiki.i  _features.wiki.i  _gallery.wiki.i  _mesh_formats.wiki.i  _n_u_r_b_s.wiki.i  _old_main.wiki.i  _options.wiki.i  _options_and_use.wiki.i  _parallel_visualization.wiki.i  _releases.wiki.i
lib/: CMakeLists.txt  aux_gl.cpp  aux_gl.hpp  aux_gl3.cpp  aux_gl3.hpp  aux_js.cpp  aux_js.hpp  aux_vis.cpp  aux_vis.hpp  base_palettes.cpp  base_palettes.hpp  cet_palettes.hpp  coll_reader.cpp  coll_reader.hpp  core_palettes.cpp  data_state.cpp  data_state.hpp  egl.cpp  egl.hpp  file_reader.cpp  file_reader.hpp  font.cpp  font.hpp  geom_utils.hpp  gl2ps.c  gl2ps.h  gl3print.cpp  gl3print.hpp  glcontext.cpp  glstate.cpp  glstate.hpp  gltf.cpp  gltf.hpp  glwindow.cpp  glwindow.hpp  logo.cpp  logo.hpp  material.cpp  material.hpp  openglvis.cpp  (+52 more)
lib/cgl/: cgl.cpp  cgl.hpp  cgl_main.cpp  cgl_main.hpp
lib/egl/: egl.cpp  egl.hpp  egl_main.cpp  egl_main.hpp
lib/gl/: attr_traits.hpp  depth_peel_oit.cpp  depth_peel_oit.hpp  framebuffer.cpp  framebuffer.hpp  platform_gl.hpp  renderer.cpp  renderer.hpp  renderer_core.cpp  renderer_core.hpp  renderer_ff.cpp  renderer_ff.hpp  renderer_msaa.cpp  renderer_msaa.hpp  renderer_print.cpp  renderer_print.hpp  shader.cpp  shader.hpp  types.cpp  types.hpp
lib/gl/shaders/: clip_plane.vert  default.frag  default.vert  depth_peel.frag  depth_peel_blend_back.frag  depth_peel_finalize.frag  depth_peel_passthrough.vert  fb_blit.frag  lighting.glsl  oit_accum.frag  oit_finalize.frag  oit_fullscreen.vert  oit_reveal.frag  printing.frag  printing.vert
lib/sdl/: sdl.cpp  sdl.hpp  sdl_helper.cpp  sdl_helper.hpp  sdl_mac.hpp  sdl_mac.mm  sdl_main.cpp  sdl_main.hpp  sdl_windows.cpp  sdl_windows.hpp  sdl_x11.cpp  sdl_x11.hpp
lib/shaders/: clip_plane.frag  default.frag  default.vert  printing.frag  printing.vert
share/: CMakeLists.txt  Credits.rtf  GLVis.icns  Info.cmake.plist.in  Info.plist  palettes-cet.txt  palettes-crameri.txt  palettes-variable-opacity.txt  palettes.txt  resource.rc.in
test/: CMakeLists.txt  glvis_driver.py  quad.gf  quad.vtk
test/data/: capacitor.saved  distance.saved  ex1.saved  ex2.saved  ex27.saved  ex3.saved  ex5.saved  ex9.saved  klein-bottle.saved  laghos.saved  mesh-explorer.saved  mfem-logo.saved  minimal-surface.saved  mobius-strip.saved  navier.saved  quad.saved  remhos.saved  shaper.saved  shifted.saved  snake.saved
tests/: CMakeLists.txt  README.md  glvis_driver.py  requirements.txt  test_cmd.py
